--- a/Stavloi.html
+++ b/Stavloi.html
@@ -93,7 +93,7 @@
       </div>
     </section>
     <section class="u-clearfix u-custom-color-1 u-section-5" id="sec-b316">
-      <div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xs u-sheet-1">
+      <div class="u-clearfix u-sheet u-sheet-1">
         <img src="images/stavloi.jpg" class="u-align-left u-expanded-width-xs u-image u-image-1" data-image-width="2736" data-image-height="3648">
         <div class="u-border-10 u-border-palette-3-base u-expanded-width-xs u-shape u-shape-left u-shape-1"></div>
         <div class="u-container-style u-group u-similar-fill u-group-1">
@@ -111,7 +111,7 @@
             <div class="u-layout-row">
               <div class="u-align-left u-container-style u-layout-cell u-left-cell u-size-30 u-layout-cell-1">
                 <div class="u-container-layout u-container-layout-1">
-                  <p class="u-text u-text-1"> Για το χωριό των Στάβλων, η διαδρομή είναι μοναδική γεμάτη με αιωνόβια έλατα, πολλά είδη βοτάνων, σπάνια είδη πουλιών και πηγές με κρυστάλλινα νερά. Την<br>ομορφιά του τοπίου ολοκληρώνουν τα γάργαρα νερά του Κρικελλοπόταμου.<br>Από τους Στάβλους περνάει και το Ευρωπαϊκό μονοπάτι Ε4, ένα διεθνές μονοπάτι που διασχίζει ευρωπαϊκές χώρες και μέρος του αποτελούν η Ελλάδα και η Κύπρος.
+                  <p class="u-text u-text-1"> Για το χωριό των Στάβλων, η διαδρομή είναι μοναδική γεμάτη με αιωνόβια έλατα, πολλά είδη βοτάνων, σπάνια είδη πουλιών και πηγές με κρυστάλλινα νερά. Την ομορφιά του τοπίου ολοκληρώνουν τα γάργαρα νερά του Κρικελλοπόταμου.<br>Από τους Στάβλους περνάει και το Ευρωπαϊκό μονοπάτι Ε4, ένα διεθνές μονοπάτι που διασχίζει ευρωπαϊκές χώρες και μέρος του αποτελούν η Ελλάδα και η Κύπρος.
                   </p>
                 </div>
               </div>
