Update test in website

--- a/index.html
+++ b/index.html
@@ -75,25 +75,25 @@
       <div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-md u-valign-middle-xl u-sheet-1">
         <h3 class="u-text u-text-1">Λίγα λόγια για το χωριό</h3>
         <p class="u-text u-text-2"> Ένα χωριό έκπληξη, κρυμμένο μέσα στα έλατα και «σκαρφαλωμένο» στα 1.230 μ. υψόμετρο. Οι Στάβλοι, το ψηλότερο χωριό της Ευρυτανίας, xτισμένο στο όρος Οξυά, αποτελεί έναν από τους ορεινότερους οικισμούς στην Ελλάδα.&nbsp;<br>
-          <br>To χωριό φαίνεται να κατοικείται από τα αρχαία χρόνια, καθώς έχουν βρεθεί κτερίσματα, κιονόκρανα, τάφοι και μυκηναϊκά τείχη που μαρτυρούν την ύπαρξη πολιτισμού στην περιοχή. Σύμφωνα με την παράδοση και αρχαιολογικά ευρήματα, πήρε το όνομά του από το μυθικό βασιλιά Εύρυτο, εγγονό του θεού Απόλλωνα, ο οποίος έδωσε και το όνομά του στην Ευρυτανία, καθώς εικάζεται ότι στην περιοχή βρίσκονταν τα ανάκτορα και οι στάβλοι του. Μία άλλη ερμηνεία για την ονομασία του προέρχεται από την παράδοση ότι η βασίλισσα Ντόμνα των&nbsp;Φράγκων Ιπποτών, είχε τους στάβλους της στην περιοχή.
+          <br> To χωριό φαίνεται να κατοικείται από τα αρχαία χρόνια, καθώς έχουν βρεθεί κτερίσματα, κιονόκρανα, τάφοι και πολύ παλαιά τείχη άγνωστης εποχής, που μαρτυρούν την ύπαρξη πολιτισμού στην περιοχή. Σύμφωνα με την παράδοση και αρχαιολογικά ευρήματα, πήρε το όνομά του από το μυθικό βασιλιά Εύρυτο, εγγονό του θεού Απόλλωνα, ο οποίος έδωσε και το όνομά του στην Ευρυτανία, καθώς εικάζεται ότι στην περιοχή βρίσκονταν τα ανάκτορα και οι στάβλοι του. Μία άλλη ερμηνεία για την ονομασία του προέρχεται από την παράδοση ότι η βασίλισσα Ντόμνα των Φράγκων Ιπποτών, είχε τους στάβλους της στην περιοχή.
         </p>
       </div>
     </section>
     <section class="u-clearfix u-custom-color-1 u-section-3" id="sec-b316">
       <div class="u-clearfix u-sheet u-sheet-1">
         <img src="images/stavloi.jpg" class="u-align-left u-image u-image-1" data-image-width="2736" data-image-height="3648">
-        <div class="u-container-style u-group u-similar-fill u-group-1">
+        <div class="u-container-style u-expanded-width-xs u-group u-similar-fill u-group-1">
           <div class="u-container-layout u-container-layout-1">
             <h2 class="u-text u-text-body-alt-color u-text-1">Η μαγεία της φύσης</h2>
             <p class="u-text u-text-body-alt-color u-text-2"> Το χωριό ανάλογα με την εποχή του χρόνου «ντύνεται» με όλα τα χρώματα της φυσικής «παλέτας». Από τις αποχρώσεις του πράσινου, στο καφέ, κι από εκεί στο λευκό του χιονιού, που με την εναλλαγή των εποχών σμίγουν το ένα με το άλλο και δημιουργούν εικόνες σαν πίνακα ζωγραφικής.</p>
-            <div class="u-border-10 u-border-palette-3-base u-shape u-shape-left u-shape-1"></div>
+            <div class="u-border-10 u-border-palette-3-base u-expanded-height u-shape u-shape-left u-shape-1"></div>
           </div>
         </div>
       </div>
     </section>
     <section class="u-clearfix u-section-4" id="sec-5183">
       <div class="u-clearfix u-sheet u-sheet-1">
-        <div class="u-clearfix u-expanded-width u-gutter-10 u-layout-wrap u-layout-wrap-1">
+        <div class="u-clearfix u-expanded-width u-gutter-0 u-layout-wrap u-layout-wrap-1">
           <div class="u-layout">
             <div class="u-layout-col">
               <div class="u-size-30">
@@ -103,7 +103,7 @@
                   </div>
                   <div class="u-align-left u-container-style u-layout-cell u-right-cell u-size-30 u-layout-cell-2">
                     <div class="u-container-layout u-valign-middle u-container-layout-2">
-                      <p class="u-text u-text-1"> Ο επισκέπτης μπορεί να απολαύσει τον καφέ ή το τσίπουρό του, στη μεγάλη πλακόστρωτη πλατεία που βρίσκεται στο κέντρο του χωριού, αλλά και να παρακολουθήσει ή και να παίξει δηλωτή, «το εθνικό άθλημα του χωριού», όπως λέγεται στους Στάβλους. Τα αιωνόβια πλατάνια χαρίζουν απλόχερα τη σκιά τους και οι πέτρινες βρύσες το δροσερό γάργαρο νερό τους.</p>
+                      <p class="u-text u-text-1"> Ο επισκέπτης μπορείνα επισκεφθεί το Λαογραφικό Μουσείο, να απολαύσει τον καφέ ή το τσίπουρό του, στη μεγάλη πλακόστρωτη πλατεία που βρίσκεται στο κέντρο του χωριού, αλλά και να παρακολουθήσει ή και να παίξει δηλωτή, «το εθνικό άθλημα του χωριού», όπως λέγεται στους Στάβλους. Τα αιωνόβια πλατάνια χαρίζουν απλόχερα τη σκιά τους και οι πέτρινες βρύσες το δροσερό γάργαρο νερό τους.</p>
                     </div>
                   </div>
                 </div>
@@ -112,7 +112,7 @@
                 <div class="u-layout-row">
                   <div class="u-align-left u-container-style u-layout-cell u-left-cell u-size-30 u-layout-cell-3">
                     <div class="u-container-layout u-container-layout-3">
-                      <p class="u-text u-text-2"> Το γραφικό αυτό χωριό έχει 4 εκκλησίες που χρονολογούνται μέχρι από το 1.870 και έχουν παίξει σημαντικό ρόλο στην ιστορία του χωριού. Πρόκειται για την Αγία Παρασκευή, Άγιο Νικόλαο, Άγιο Χαράλαμπο. Διασχίζοντας ένα μικρό μονοπάτι μέσα στα έλατα, φτάνει κανείς στο ξωκλήσι του Αγίου Αθανασίου, από τον προαύλιο χώρο του οποίου αγναντεύει όλο το χωριό. Ένα απέραντο πράσινο «χαλί» ξεδιπλώνεται μπροστά και γύρω του μέσα σε μια ατμόσφαιρα που τον γαληνεύει.</p>
+                      <p class="u-text u-text-2"> Το γραφικό αυτό χωριό έχει 4 εκκλησίες που η παλαιότερη χτίστηκε πριν το 1821 και έχουν παίξει σημαντικό ρόλο στην ιστορία του χωριού. Πρόκειται για την Αγία Παρασκευή, Άγιο Νικόλαο, Άγιο Χαράλαμπο και διασχίζοντας ένα μικρό μονοπάτι μέσα στα έλατα, φτάνει κανείς στο ξωκλήσι του Αγίου Αθανασίου, από τον προαύλιο χώρο του οποίου αγναντεύει όλο το χωριό. Ένα απέραντο πράσινο «χαλί» ξεδιπλώνεται μπροστά και γύρω του μέσα σε μια ατμόσφαιρα που τον γαληνεύει.</p>
                     </div>
                   </div>
                   <div class="u-container-style u-image u-layout-cell u-right-cell u-size-30 u-image-2" src="" data-image-width="3584" data-image-height="2688">
@@ -183,49 +183,63 @@
               <style data-mode="LG"></style>
               <style data-mode="MD"></style>
               <style data-mode="SM"></style>
-              <style data-mode="XS"></style>
+              <style data-mode="XS" data-visited="true"></style>
             </div>
-            <div class="u-carousel-item u-gallery-item u-carousel-item-5" data-image-width="1740" data-image-height="1302">
+            <div class="u-carousel-item u-gallery-item u-carousel-item-5" data-image-width="1500" data-image-height="2000">
               <div class="u-back-slide">
-                <img class="u-back-image u-expanded" src="images/325630858_8769591199780361_7421842938250999505_n.jpg">
+                <img class="u-back-image u-expanded" src="images/Image4.jpeg">
               </div>
               <div class="u-over-slide u-over-slide-5">
                 <h3 class="u-gallery-heading"></h3>
                 <p class="u-gallery-text"></p>
               </div>
-              <style data-mode="XL"></style>
+              <style data-mode="XL" data-visited="true"></style>
               <style data-mode="LG"></style>
               <style data-mode="MD"></style>
               <style data-mode="SM"></style>
-              <style data-mode="XS"></style>
+              <style data-mode="XS" data-visited="true"></style>
             </div>
             <div class="u-carousel-item u-gallery-item u-carousel-item-6" data-image-width="1740" data-image-height="1302">
               <div class="u-back-slide">
-                <img class="u-back-image u-expanded" src="images/325229623_1351758098960284_1277676876013996067_n.jpg">
+                <img class="u-back-image u-expanded" src="images/325630858_8769591199780361_7421842938250999505_n.jpg">
               </div>
               <div class="u-over-slide u-over-slide-6">
                 <h3 class="u-gallery-heading"></h3>
                 <p class="u-gallery-text"></p>
               </div>
-              <style data-mode="XL"></style>
+              <style data-mode="XL" data-visited="true"></style>
               <style data-mode="LG"></style>
               <style data-mode="MD"></style>
               <style data-mode="SM"></style>
-              <style data-mode="XS"></style>
+              <style data-mode="XS" data-visited="true"></style>
             </div>
             <div class="u-carousel-item u-gallery-item u-carousel-item-7" data-image-width="1740" data-image-height="1302">
               <div class="u-back-slide">
-                <img class="u-back-image u-expanded" src="images/325161000_631627715400883_2589204503621323309_n.jpg">
+                <img class="u-back-image u-expanded" src="images/325229623_1351758098960284_1277676876013996067_n.jpg">
               </div>
               <div class="u-over-slide u-over-slide-7">
                 <h3 class="u-gallery-heading"></h3>
                 <p class="u-gallery-text"></p>
               </div>
-              <style data-mode="XL"></style>
+              <style data-mode="XL" data-visited="true"></style>
               <style data-mode="LG"></style>
               <style data-mode="MD"></style>
               <style data-mode="SM"></style>
-              <style data-mode="XS"></style>
+              <style data-mode="XS" data-visited="true"></style>
+            </div>
+            <div class="u-carousel-item u-gallery-item u-carousel-item-8" data-image-width="1740" data-image-height="1302">
+              <div class="u-back-slide">
+                <img class="u-back-image u-expanded" src="images/325161000_631627715400883_2589204503621323309_n.jpg">
+              </div>
+              <div class="u-over-slide u-over-slide-8">
+                <h3 class="u-gallery-heading"></h3>
+                <p class="u-gallery-text"></p>
+              </div>
+              <style data-mode="XL" data-visited="true"></style>
+              <style data-mode="LG"></style>
+              <style data-mode="MD"></style>
+              <style data-mode="SM"></style>
+              <style data-mode="XS" data-visited="true"></style>
             </div>
           </div>
           <a class="u-absolute-vcenter u-carousel-control u-carousel-control-prev u-grey-70 u-icon-circle u-opacity u-opacity-70 u-spacing-10 u-text-white u-carousel-control-1" href="#carousel-e131" role="button" data-u-slide="prev">
@@ -273,6 +287,9 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
             </li>
             <li class="u-carousel-thumbnail u-carousel-thumbnail-7" data-u-target="#carousel-e131" data-u-slide-to="6">
               <img class="u-carousel-thumbnail-image u-image" src="images/325161000_631627715400883_2589204503621323309_n.jpg">
+            </li>
+            <li class="u-carousel-thumbnail u-carousel-thumbnail-8" data-u-target="#carousel-e131" data-u-slide-to="7">
+              <img class="u-carousel-thumbnail-image u-image" src="images/Image4.jpeg">
             </li>
           </ol>
         </div>
