--- a/camera.html
+++ b/camera.html
@@ -13,6 +13,14 @@
     <link id="u-theme-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i|Open+Sans:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i">
     <link id="u-page-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster:400">
     
+    <style>
+    #snowflakes-container {
+        width: 500px;
+        height: 500px;
+        position: relative;
+        overflow: hidden;
+    }
+</style>
     
     <script type="application/ld+json">{
 		"@context": "http://schema.org",
@@ -26,7 +34,7 @@
   </head>
   <body class="u-body u-xl-mode" data-lang="en"><header class="u-clearfix u-header u-image u-header" id="sec-3eda" data-image-width="2000" data-image-height="1333"><div class="u-clearfix u-sheet u-sheet-1">
         <h1 class="u-align-left u-custom-font u-font-lobster u-text u-text-custom-color-1 u-title u-text-1">
-          <a class="u-border-active-white u-border-hover-white u-border-none u-btn u-button-link u-button-style u-none u-text-custom-color-1 u-btn-1" href="stavloi.html">Στάβλοι Ευρυτανί<span style="font-size: 3.75rem;"></span>ας&nbsp;
+          <a class="u-border-active-white u-border-hover-white u-border-none u-btn u-button-link u-button-style u-none u-text-palette-1-dark-3 u-btn-1" href="stavloi.html">Στάβλοι Ευρυτανί<span style="font-size: 3.75rem;"></span>ας&nbsp;
           </a>
         </h1>
         <nav class="u-menu u-menu-one-level u-offcanvas u-menu-1" data-responsive-from="SM">
@@ -38,7 +46,7 @@
             </a>
           </div>
           <div class="u-custom-menu u-nav-container">
-            <ul class="u-nav u-spacing-2 u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-active-custom-color-2 u-border-2 u-border-custom-color-2 u-button-style u-custom-color-1 u-hover-custom-color-2 u-nav-link u-text-active-grey-5 u-text-hover-white u-text-white" href="camera.html" style="padding: 10px 20px 10px 22px;">ΚΑΜΕΡΑ</a>
+            <ul class="u-nav u-spacing-2 u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-active-palette-1-dark-2 u-border-2 u-border-custom-color-2 u-button-style u-custom-color-2 u-hover-palette-1-light-2 u-nav-link u-text-active-grey-5 u-text-hover-white u-text-white" href="camera.html" style="padding: 10px 20px 10px 22px;">ΚΑΜΕΡΑ</a>
 </li></ul>
           </div>
           <div class="u-custom-menu u-nav-container-collapse">
@@ -53,8 +61,149 @@
           </div>
         </nav>
       </div></header>
-    <section class="u-clearfix u-gradient u-section-1" id="sec-6221">
-      <div class="u-clearfix u-custom-html u-custom-html-1">
+    <section class="u-align-center u-clearfix u-gradient u-section-1" id="sec-60dc">
+      <div class="u-clearfix u-sheet u-sheet-1" id="snowflakes-container">
+    <script src="https://unpkg.com/magic-snowflakes/dist/snowflakes.min.js"></script>
+    <script>
+        var snowflakes = new Snowflakes({
+            color: '#FFFFFF', // Default: "#5ECDEF"
+            container: document.querySelector('#snowflakes-container'), // Default: document.body
+            count: 30, // 100 snowflakes. Default: 50
+            minOpacity: 0.1, // From 0 to 1. Default: 0.6
+            maxOpacity: 0.95, // From 0 to 1. Default: 1
+            minSize: 10, // Default: 10
+            maxSize: 25, // Default: 25
+            rotation: true, // Default: true
+            speed: 0.8, // The property affects the speed of falling. Default: 1
+            wind: false, // Without wind. Default: true
+            width: 600, // Default: width of container
+            height: 550, // Default: height of container
+            zIndex: 100, // Default: 9999,
+            autoResize: true // Default: true
+        });
+    </script>
+        <h1 class="u-text u-text-default u-text-1">&nbsp;Χειμώνιασε επιτέλους..</h1>
+        <div class="u-carousel u-expanded-width-xs u-gallery u-layout-thumbnails u-lightbox u-no-transition u-show-text-always u-gallery-1" id="carousel-e131" data-interval="5000" data-u-ride="carousel">
+          <div class="u-carousel-inner u-gallery-inner" role="listbox">
+            <div class="u-active u-carousel-item u-gallery-item u-carousel-item-1">
+              <div class="u-back-slide" data-image-width="1600" data-image-height="720">
+                <img class="u-back-image u-expanded" src="images/viber_image_2023-01-26_18-14-22-539.jpg">
+              </div>
+              <div class="u-over-slide u-over-slide-1">
+                <h3 class="u-gallery-heading">Sample Title</h3>
+                <p class="u-gallery-text">Sample Text</p>
+              </div>
+            </div>
+            <div class="u-carousel-item u-gallery-item u-carousel-item-2">
+              <div class="u-back-slide" data-image-width="1600" data-image-height="720">
+                <img class="u-back-image u-expanded" src="images/viber_image_2023-01-26_18-14-19-986.jpg">
+              </div>
+              <div class="u-over-slide u-over-slide-2">
+                <h3 class="u-gallery-heading">Sample Title</h3>
+                <p class="u-gallery-text">Sample Text</p>
+              </div>
+            </div>
+            <div class="u-carousel-item u-gallery-item u-carousel-item-3" data-image-width="2836" data-image-height="1875">
+              <div class="u-back-slide" data-image-width="1600" data-image-height="720">
+                <img class="u-back-image u-expanded" src="images/viber_image_2023-01-26_18-14-18-025.jpg">
+              </div>
+              <div class="u-over-slide u-over-slide-3">
+                <h3 class="u-gallery-heading">Sample Title</h3>
+                <p class="u-gallery-text">Sample Text</p>
+              </div>
+            </div>
+            <div class="u-carousel-item u-gallery-item u-carousel-item-4" data-image-width="1600" data-image-height="720">
+              <div class="u-back-slide">
+                <img class="u-back-image u-expanded" src="images/viber_image_2023-01-26_18-14-22-058.jpg">
+              </div>
+              <div class="u-over-slide u-over-slide-4">
+                <h3 class="u-gallery-heading"></h3>
+                <p class="u-gallery-text"></p>
+              </div>
+              <style data-mode="XL" data-visited="true"></style>
+              <style data-mode="LG" data-visited="true"></style>
+              <style data-mode="MD" data-visited="true"></style>
+              <style data-mode="SM" data-visited="true"></style>
+              <style data-mode="XS" data-visited="true"></style>
+            </div>
+            <div class="u-carousel-item u-gallery-item u-carousel-item-5" data-image-width="1600" data-image-height="720">
+              <div class="u-back-slide">
+                <img class="u-back-image u-expanded" src="images/viber_image_2023-01-26_18-14-17-695.jpg">
+              </div>
+              <div class="u-over-slide u-over-slide-5">
+                <h3 class="u-gallery-heading"></h3>
+                <p class="u-gallery-text"></p>
+              </div>
+              <style data-mode="XL"></style>
+              <style data-mode="LG" data-visited="true"></style>
+              <style data-mode="MD" data-visited="true"></style>
+              <style data-mode="SM" data-visited="true"></style>
+              <style data-mode="XS" data-visited="true"></style>
+            </div>
+            <div class="u-carousel-item u-gallery-item u-carousel-item-6" data-image-width="1600" data-image-height="720">
+              <div class="u-back-slide" data-image-width="1600" data-image-height="720">
+                <img class="u-back-image u-expanded" src="images/viber_image_2023-01-26_18-14-22-024.jpg">
+              </div>
+              <div class="u-over-slide u-over-slide-6">
+                <h3 class="u-gallery-heading"></h3>
+                <p class="u-gallery-text"></p>
+              </div>
+              <style data-mode="XL"></style>
+              <style data-mode="LG" data-visited="true"></style>
+              <style data-mode="MD" data-visited="true"></style>
+              <style data-mode="SM" data-visited="true"></style>
+              <style data-mode="XS" data-visited="true"></style>
+            </div>
+          </div>
+          <a class="u-absolute-vcenter u-carousel-control u-carousel-control-prev u-grey-70 u-icon-circle u-opacity u-opacity-70 u-spacing-10 u-text-white u-carousel-control-1" href="#carousel-e131" role="button" data-u-slide="prev">
+            <span aria-hidden="true">
+              <svg viewBox="0 0 451.847 451.847"><path d="M97.141,225.92c0-8.095,3.091-16.192,9.259-22.366L300.689,9.27c12.359-12.359,32.397-12.359,44.751,0
+c12.354,12.354,12.354,32.388,0,44.748L173.525,225.92l171.903,171.909c12.354,12.354,12.354,32.391,0,44.744
+c-12.354,12.365-32.386,12.365-44.745,0l-194.29-194.281C100.226,242.115,97.141,234.018,97.141,225.92z"></path></svg>
+            </span>
+            <span class="sr-only">
+              <svg viewBox="0 0 451.847 451.847"><path d="M97.141,225.92c0-8.095,3.091-16.192,9.259-22.366L300.689,9.27c12.359-12.359,32.397-12.359,44.751,0
+c12.354,12.354,12.354,32.388,0,44.748L173.525,225.92l171.903,171.909c12.354,12.354,12.354,32.391,0,44.744
+c-12.354,12.365-32.386,12.365-44.745,0l-194.29-194.281C100.226,242.115,97.141,234.018,97.141,225.92z"></path></svg>
+            </span>
+          </a>
+          <a class="u-absolute-vcenter u-carousel-control u-carousel-control-next u-grey-70 u-icon-circle u-opacity u-opacity-70 u-spacing-10 u-text-white u-carousel-control-2" href="#carousel-e131" role="button" data-u-slide="next">
+            <span aria-hidden="true">
+              <svg viewBox="0 0 451.846 451.847"><path d="M345.441,248.292L151.154,442.573c-12.359,12.365-32.397,12.365-44.75,0c-12.354-12.354-12.354-32.391,0-44.744
+L278.318,225.92L106.409,54.017c-12.354-12.359-12.354-32.394,0-44.748c12.354-12.359,32.391-12.359,44.75,0l194.287,194.284
+c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,248.292z"></path></svg>
+            </span>
+            <span class="sr-only">
+              <svg viewBox="0 0 451.846 451.847"><path d="M345.441,248.292L151.154,442.573c-12.359,12.365-32.397,12.365-44.75,0c-12.354-12.354-12.354-32.391,0-44.744
+L278.318,225.92L106.409,54.017c-12.354-12.359-12.354-32.394,0-44.748c12.354-12.359,32.391-12.359,44.75,0l194.287,194.284
+c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,248.292z"></path></svg>
+            </span>
+          </a>
+          <ol class="u-carousel-thumbnails u-spacing-10 u-carousel-thumbnails-1">
+            <li class="u-active u-carousel-thumbnail u-carousel-thumbnail-1" data-u-target="#carousel-e131" data-u-slide-to="0">
+              <img class="u-carousel-thumbnail-image u-image" src="images/viber_image_2023-01-26_18-14-22-539.jpg">
+            </li>
+            <li class="u-carousel-thumbnail u-carousel-thumbnail-2" data-u-target="#carousel-e131" data-u-slide-to="1">
+              <img class="u-carousel-thumbnail-image u-image" src="images/viber_image_2023-01-26_18-14-19-986.jpg">
+            </li>
+            <li class="u-carousel-thumbnail u-carousel-thumbnail-3" data-u-target="#carousel-e131" data-u-slide-to="2">
+              <img class="u-carousel-thumbnail-image u-image" src="images/viber_image_2023-01-26_18-14-18-025.jpg">
+            </li>
+            <li class="u-carousel-thumbnail u-carousel-thumbnail-4" data-u-target="#carousel-e131" data-u-slide-to="3">
+              <img class="u-carousel-thumbnail-image u-image" src="images/viber_image_2023-01-26_18-14-22-058.jpg">
+            </li>
+            <li class="u-carousel-thumbnail u-carousel-thumbnail-5" data-u-target="#carousel-e131" data-u-slide-to="4">
+              <img class="u-carousel-thumbnail-image u-image" src="images/viber_image_2023-01-26_18-14-17-695.jpg">
+            </li>
+            <li class="u-carousel-thumbnail u-carousel-thumbnail-6" data-u-target="#carousel-e131" data-u-slide-to="5">
+              <img class="u-carousel-thumbnail-image u-image" src="images/viber_image_2023-01-26_18-14-22-024.jpg">
+            </li>
+          </ol>
+        </div>
+      </div>
+    </section>
+    <section class="u-clearfix u-gradient u-section-2" id="sec-6221">
+      <div class="u-clearfix u-custom-html u-expanded-width u-custom-html-1">
         <img style="width:100%; height:100%;" src="http://stavloi.dyndns.tv:8080/video.mjpg">
       </div>
     </section>
