--- a/stavloi.html
+++ b/stavloi.html
@@ -34,7 +34,7 @@
   </head>
   <body class="u-body u-xl-mode" data-lang="en"><header class="u-clearfix u-header u-image u-header" id="sec-3eda" data-image-width="2000" data-image-height="1333"><div class="u-clearfix u-sheet u-sheet-1">
         <h1 class="u-align-left u-custom-font u-font-lobster u-text u-text-custom-color-1 u-title u-text-1">
-          <a class="u-border-active-white u-border-hover-white u-border-none u-btn u-button-link u-button-style u-none u-text-custom-color-1 u-btn-1" href="stavloi.html">Στάβλοι Ευρυτανί<span style="font-size: 3.75rem;"></span>ας&nbsp;
+          <a class="u-border-active-white u-border-hover-white u-border-none u-btn u-button-link u-button-style u-none u-text-palette-1-dark-3 u-btn-1" href="stavloi.html">Στάβλοι Ευρυτανί<span style="font-size: 3.75rem;"></span>ας&nbsp;
           </a>
         </h1>
         <nav class="u-menu u-menu-one-level u-offcanvas u-menu-1" data-responsive-from="SM">
@@ -46,7 +46,7 @@
             </a>
           </div>
           <div class="u-custom-menu u-nav-container">
-            <ul class="u-nav u-spacing-2 u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-active-custom-color-2 u-border-2 u-border-custom-color-2 u-button-style u-custom-color-1 u-hover-custom-color-2 u-nav-link u-text-active-grey-5 u-text-hover-white u-text-white" href="camera.html" style="padding: 10px 20px 10px 22px;">ΚΑΜΕΡΑ</a>
+            <ul class="u-nav u-spacing-2 u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-active-palette-1-dark-2 u-border-2 u-border-custom-color-2 u-button-style u-custom-color-2 u-hover-palette-1-light-2 u-nav-link u-text-active-grey-5 u-text-hover-white u-text-white" href="camera.html" style="padding: 10px 20px 10px 22px;">ΚΑΜΕΡΑ</a>
 </li></ul>
           </div>
           <div class="u-custom-menu u-nav-container-collapse">
